--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM confluentinc/cp-kafka-connect-base:7.4.0
 
-COPY libs/ /usr/share/java/confluent-connect/
+COPY confluent-connect-libs/ /usr/share/java/confluent-connect/
 
 COPY entrypoint.sh /entrypoint.sh
 
