--- a/localdev/docker-compose.yml
+++ b/localdev/docker-compose.yml
@@ -29,12 +29,12 @@ services:
       KAFKA_CFG_BROKER_ID: "1"
       KAFKA_ENABLE_KRAFT: "yes"
       ALLOW_PLAINTEXT_LISTENER: "yes"
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,DOCKER:PLAINTEXT,HOST:PLAINTEXT,CLI:PLAINTEXT'
-      KAFKA_CFG_ADVERTISED_LISTENERS: 'DOCKER://kafka:29092,HOST://localhost:9092,DOCKERCLI://host.docker.internal:9093'
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,DOCKER:PLAINTEXT,HOST:PLAINTEXT'
+      KAFKA_CFG_ADVERTISED_LISTENERS: 'DOCKER://kafka:29092,HOST://localhost:9092'
       KAFKA_CFG_PROCESS_ROLES: 'broker,controller'
       KAFKA_CFG_NODE_ID: 1
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: '1@kafka:29093'
-      KAFKA_CFG_LISTENERS: 'DOCKER://kafka:29092,CONTROLLER://kafka:29093,HOST://0.0.0.0:9092,DOCKERCLI://0.0.0.0:9093'
+      KAFKA_CFG_LISTENERS: 'DOCKER://kafka:29092,CONTROLLER://kafka:29093,HOST://0.0.0.0:9092'
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: 'DOCKER'
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
 
