--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
           name: Bootstrap Gradle
           command: ./gradlew --version
       - run:
+          name: Detekt
+          command: ./gradlew --console=plain detektAll
+      - run:
           name: Check
           command: ./gradlew --console=plain check
       - store_test_results:
