--- a/localdev/docker-compose.yml
+++ b/localdev/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       AWS_ACCESS_KEY_ID: minioadmin
       AWS_SECRET_ACCESS_KEY: minioadmin
 
+  kbackup:
+    image: lovelysystems/lovely-kafka-backup:dev
+    # run bash and wait for user input
+    tty: true
+    environment:
+      AWS_ACCESS_KEY_ID: minioadmin
+      AWS_SECRET_ACCESS_KEY: minioadmin
+
   kafka:
     image: bitnami/kafka:3.4.0
     container_name: localdev-kafka
@@ -59,7 +67,7 @@ services:
 
   # redpanda console (formerly kowl) https://github.com/redpanda-data/console
   kowl:
-    image: docker.redpanda.com/redpandadata/console:v2.2.3
+    image: docker.redpanda.com/redpandadata/console:v2.3.3
     ports:
       - "5000:5000"
     entrypoint: /bin/sh
