--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           command: ./gradlew detektAll
       - run:
           name: Check
-          command: ./gradlew check --debug
+          command: ./gradlew check
       - store_test_results:
           path: build/test-results
       - save_cache:
